--- a/main.html
+++ b/main.html
@@ -5,9 +5,35 @@
 <head>
 	<link rel="stylesheet" href="styles.css">
 </head>
+	<style>
+		.main{
+			background-color:#f5f5f5;
+			height:300px;
+			padding:20px;
+		}
+		.desc{
+			border:5px solid white;
+			margin:20px;
+		}
+		.autor{
+			text-align:right;
+			
+		}
+	</style>
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div class="main">
+		<h1>Testimonials</h1>
+		<div class="desc">
+			<p>This product is amazing</p>
+			<p class="autor"><i>-By Medhavi</i></p>
+		</div>
+		<div class="desc">
+			<p>I have been using this for few weeks now</p>
+			<p class="autor"><i>-By Aaryika</i></p>
+		</div>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
